<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imgArticle"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/ImageView.Corner" />

    <TextView
        android:id="@+id/txtArticleTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/cd_article_title"
        android:ellipsize="end"
        android:fontFamily="@font/poppins_bold"
        android:maxLines="2"
        android:text="@string/dummy_text"
        android:textColor="@color/variantOrange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgArticle"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtArticleDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="98dp"
        android:contentDescription="@string/cd_article_description"
        android:ellipsize="end"
        android:fontFamily="@font/poppins_medium"
        android:maxLines="3"
        android:text="@string/dummy_text"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imgArticle"
        app:layout_constraintTop_toBottomOf="@+id/txtArticleTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>